--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   pretty_dio_logger: ^1.3.1
   shimmer: ^3.0.0
   skeletonizer: ^1.1.0
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
