--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,3 +20,14 @@ jobs:
 
       # Clones the project on the machine
       - uses: actions/checkout@v4
+
+      # Install Flutter and related dependency on this machine
+      - name: Setup Flutter
+        uses: subosito/flutter-action@v2
+        with: 
+          channel: 'stable'
+          # flutter-version: '3.16.8'
+          # ^ If you want to use a specific version of flutter
+      
+      - name: Install dependencies
+        run: flutter pub get
