--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   shimmer: ^3.0.0
   skeletonizer: ^1.1.0
   intl: ^0.19.0
+  firebase_core: ^4.0.0
 
 dev_dependencies:
   flutter_test:
