--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,8 +27,8 @@ jobs:
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with: 
-          channel: 'stable'
-          # flutter-version: '3.16.8'
+          # channel: 'stable'
+          flutter-version: '3.27.4'
           # ^ If you want to use a specific version of flutter
       
       - name: Install dependencies
